import { describe, it, expect, afterEach, beforeEach } from 'vitest';
import { Notice } from 'obsidian';
import { openVault, type VaultSession } from '../helpers/vaultSession';
import { freezeDate } from '../helpers/fakeDate';

// Frozen so `==> every mon` on `@2026-09-21` lands on the `@2026-09-28` these
// tests hard-code, no matter which day the suite runs.
freezeDate(new Date(2026, 8, 25, 12, 0, 0));

/**
 * What a fire leaves in the file, byte for byte, pinned before the effects of
 * one fire were folded into one write (F3) and held to after it.
 *
 * The snapshot was taken on the code that still wrote each effect on its own:
 * the next instance, then the strip or the delete, each resolving the task
 * again. Folding them must change how many writes there are and nothing about
 * what they leave.
 *
 * Placement (F4) changed what some of them leave, and only where it meant
 * to: a next instance written above the frontmatter now goes below it.
 */

const FILE = 'note.md';
const ARCHIVE = 'archive.md';

let live: VaultSession | undefined;

beforeEach(() => {
    Notice.messages.length = 0;
});

afterEach(() => {
    live?.dispose();
    live = undefined;
});

async function open(files: Record<string, string>): Promise<{ contents: Map<string, string>; session: VaultSession }> {
    const opened = await openVault(files);
    live = opened.session;
    return opened;
}

function idOf(session: VaultSession, content: string): string {
    const found = session.index.getTasks().filter(task => task.file === FILE && task.content === content);
    expect(found).toHaveLength(1);
    return found[0].id;
}

/**
 * Every file, one JSON string per line: a CR, a tab and a missing final
 * terminator all show, where a printed template would hide them.
 */
function bytes(contents: Map<string, string>): Record<string, string[]> {
    const out: Record<string, string[]> = {};
    for (const [path, text] of [...contents].sort(([a], [b]) => a.localeCompare(b))) {
        out[path] = text.split('\n').map(line => JSON.stringify(line));
    }
    return out;
}

// The note under frontmatter pinned the next instance going above the
// frontmatter until placement (F4) kept it in the body (CY1).
const GEN = ['```tv-gen 週報', '- [ ] 対象', '\t- [ ] 生成子', '```', ''];

/** Each note holds one row worded `対象`, the one that fires. */
const COMPLETIONS: Array<[string, string, string[]?]> = [
    ['inline command, top level', [
        '# note', '- [ ] 上 @2026-09-21', '- [ ] 対象 @2026-09-21 ==> every mon', '- [ ] 下 @2026-09-21', '',
    ].join('\n')],
    ['command on a child line, with ordinary children', [
        '# note', '- [ ] 上 @2026-09-21', '- [ ] 対象 @2026-09-21', '\t- ==> every mon', '\t- [ ] 子 @2026-09-21', '\t- メモ',
        '- [ ] 下 @2026-09-21', '',
    ].join('\n')],
    ['nested row indented by spaces, among siblings', [
        '# note', '- [ ] 親 @2026-09-21', '    - [ ] 兄 @2026-09-21', '    - [ ] 対象 @2026-09-21 ==> every mon',
        '        - [ ] 孫 @2026-09-21', '    - [ ] 弟 @2026-09-21', '- [ ] 下 @2026-09-21', '',
    ].join('\n')],
    ['state carried to the next instance', [
        '# note', '- [ ] 対象 @2026-09-21', '\t- ==> every mon state(n: 3)', '\t- [ ] 子', '',
    ].join('\n')],
    ['generated by a block', [
        '# note', '- [ ] 上 @2026-09-21', '- [ ] 対象 @2026-09-21', '\t- ==> every mon use("週報")', '\t- [ ] 元の子',
        '- [ ] 下 @2026-09-21', '', ...GEN,
    ].join('\n')],
    ['a CRLF note', [
        '# note', '- [ ] 上 @2026-09-21', '- [ ] 対象 @2026-09-21', '\t- ==> every mon', '- [ ] 下 @2026-09-21', '',
    ].join('\r\n')],
    ['under frontmatter', [
        '---', 'tv-color: ff0000', '---', '- [ ] 対象 @2026-09-21 ==> every mon', '\t- [ ] 子', '',
    ].join('\n')],
    ['expired: nothing to write, the command is consumed', [
        '# note', '- [ ] 対象 @2026-09-21 ==> every mon until(2026-09-22)', '',
    ].join('\n')],
    ['move within the same file', [
        '# note', '- [ ] 上 @2026-09-21', '- [ ] 対象 @2026-09-21 ==> move()', '\t- [ ] 子 @2026-09-21 ^c1',
        '- [ ] 下 @2026-09-21', '',
    ].join('\n')],
    ['next instance and a move within the same file', [
        '# note', '- [ ] 上 @2026-09-21', '- [ ] 対象 @2026-09-21', '\t- ==> every mon move()', '\t- [ ] 子 @2026-09-21',
        '- [ ] 下 @2026-09-21', '',
    ].join('\n')],
    ['next instance and a move to a heading of the note', [
        '# note', '- [ ] 上 @2026-09-21', '- [ ] 対象 @2026-09-21', '\t- ==> every mon move([[#Done]])', '\t- [ ] 子 @2026-09-21',
        '- [ ] 下 @2026-09-21', '## Done', '- [x] 済 @2026-09-20', '', '## Later', '',
    ].join('\n')],
];

describe('a completion fire leaves the same bytes', () => {
    for (const [name, note, others] of COMPLETIONS) {
        it(name, async () => {
            const files: Record<string, string> = { [FILE]: note };
            for (const path of others ?? []) files[path] = ['# archive', ''].join('\n');
            const { contents, session } = await open(files);

            expect(await session.index.updateTask(idOf(session, '対象'), { statusChar: 'x' })).toBe(true);
            await session.flowSettled(FILE, ...(others ?? []));

            expect(bytes(contents)).toMatchSnapshot();
            expect(Notice.messages).toEqual([]);
        });
    }
});

const DELETIONS: Array<[string, string]> = [
    ['recurrence, with children', [
        '# note', '- [ ] 上 @2026-09-21', '- [ ] 対象 @2026-09-21', '\t- ==> every mon', '\t- [ ] 子 @2026-09-21',
        '- [ ] 下 @2026-09-21', '',
    ].join('\n')],
    ['generated by a block', [
        '# note', '- [ ] 上 @2026-09-21', '- [ ] 対象 @2026-09-21', '\t- ==> every mon use("週報")', '\t- [ ] 元の子',
        '- [ ] 下 @2026-09-21', '', ...GEN,
    ].join('\n')],
    ['worded like its next instance', [
        '# note', '- [ ] 対象', '\t- ==> every mon', '',
    ].join('\n')],
];

describe('a deletion fire leaves the same bytes', () => {
    for (const [name, note] of DELETIONS) {
        it(name, async () => {
            const { contents, session } = await open({ [FILE]: note });

            expect(await session.index.deleteTask(idOf(session, '対象'), { fireFlow: true })).toBe(true);
            await session.flowSettled(FILE);

            expect(bytes(contents)).toMatchSnapshot();
            expect(Notice.messages).toEqual([]);
        });
    }
});
