// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a completion fire leaves the same bytes > a CRLF note 1`] = `
{
  "note.md": [
    ""# note\\r"",
    ""- [ ] 対象 @2026-09-28\\r"",
    ""\\t- ==> every mon\\r"",
    ""- [ ] 上 @2026-09-21\\r"",
    ""- [x] 対象 @2026-09-21\\r"",
    ""- [ ] 下 @2026-09-21\\r"",
    """",
  ],
}
`;

exports[`a completion fire leaves the same bytes > command on a child line, with ordinary children 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 対象 @2026-09-28"",
    ""\\t- ==> every mon"",
    ""- [ ] 上 @2026-09-21"",
    ""- [x] 対象 @2026-09-21"",
    ""\\t- [ ] 子 @2026-09-21"",
    ""\\t- メモ"",
    ""- [ ] 下 @2026-09-21"",
    """",
  ],
}
`;

exports[`a completion fire leaves the same bytes > expired: nothing to write, the command is consumed 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [x] 対象 @2026-09-21"",
    """",
  ],
}
`;

exports[`a completion fire leaves the same bytes > generated by a block 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 対象"",
    ""\\t- ==> every mon use(\\"週報\\")"",
    ""\\t- [ ] 生成子"",
    ""- [ ] 上 @2026-09-21"",
    ""- [x] 対象 @2026-09-21"",
    ""\\t- [ ] 元の子"",
    ""- [ ] 下 @2026-09-21"",
    """",
    ""\`\`\`tv-gen 週報"",
    ""- [ ] 対象"",
    ""\\t- [ ] 生成子"",
    ""\`\`\`"",
    """",
  ],
}
`;

exports[`a completion fire leaves the same bytes > inline command, top level 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 対象 @2026-09-28 ==> every mon"",
    ""- [ ] 上 @2026-09-21"",
    ""- [x] 対象 @2026-09-21"",
    ""- [ ] 下 @2026-09-21"",
    """",
  ],
}
`;

exports[`a completion fire leaves the same bytes > move within the same file 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 上 @2026-09-21"",
    ""- [ ] 下 @2026-09-21"",
    ""- [x] 対象 @2026-09-21"",
    ""\\t- [ ] 子 @2026-09-21 ^c1"",
    """",
  ],
}
`;

exports[`a completion fire leaves the same bytes > nested row indented by spaces, among siblings 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 親 @2026-09-21"",
    ""    - [ ] 対象 @2026-09-28 ==> every mon"",
    ""    - [ ] 兄 @2026-09-21"",
    ""    - [x] 対象 @2026-09-21"",
    ""        - [ ] 孫 @2026-09-21"",
    ""    - [ ] 弟 @2026-09-21"",
    ""- [ ] 下 @2026-09-21"",
    """",
  ],
}
`;

exports[`a completion fire leaves the same bytes > next instance and a move to a heading of the note 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 対象 @2026-09-28"",
    ""\\t- ==> every mon move([[#Done]])"",
    ""- [ ] 上 @2026-09-21"",
    ""- [ ] 下 @2026-09-21"",
    ""## Done"",
    ""- [x] 済 @2026-09-20"",
    ""- [x] 対象 @2026-09-21"",
    ""\\t- [ ] 子 @2026-09-21"",
    """",
    ""## Later"",
    """",
  ],
}
`;

exports[`a completion fire leaves the same bytes > next instance and a move within the same file 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 対象 @2026-09-28"",
    ""\\t- ==> every mon move()"",
    ""- [ ] 上 @2026-09-21"",
    ""- [ ] 下 @2026-09-21"",
    ""- [x] 対象 @2026-09-21"",
    ""\\t- [ ] 子 @2026-09-21"",
    """",
  ],
}
`;

exports[`a completion fire leaves the same bytes > state carried to the next instance 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 対象 @2026-09-28"",
    ""\\t- ==> every mon state(n: 3)"",
    ""- [x] 対象 @2026-09-21"",
    ""\\t- [ ] 子"",
    """",
  ],
}
`;

exports[`a completion fire leaves the same bytes > under frontmatter 1`] = `
{
  "note.md": [
    ""---"",
    ""tv-color: ff0000"",
    ""---"",
    ""- [ ] 対象 @2026-09-28 ==> every mon"",
    ""- [x] 対象 @2026-09-21"",
    ""\\t- [ ] 子"",
    """",
  ],
}
`;

exports[`a deletion fire leaves the same bytes > generated by a block 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 対象"",
    ""\\t- ==> every mon use(\\"週報\\")"",
    ""\\t- [ ] 生成子"",
    ""- [ ] 上 @2026-09-21"",
    ""- [ ] 下 @2026-09-21"",
    """",
    ""\`\`\`tv-gen 週報"",
    ""- [ ] 対象"",
    ""\\t- [ ] 生成子"",
    ""\`\`\`"",
    """",
  ],
}
`;

exports[`a deletion fire leaves the same bytes > recurrence, with children 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 対象 @2026-09-28"",
    ""\\t- ==> every mon"",
    ""- [ ] 上 @2026-09-21"",
    ""- [ ] 下 @2026-09-21"",
    """",
  ],
}
`;

exports[`a deletion fire leaves the same bytes > worded like its next instance 1`] = `
{
  "note.md": [
    ""# note"",
    ""- [ ] 対象 @2026-09-28"",
    ""\\t- ==> every mon"",
    """",
  ],
}
`;
